installdir = $(pkglibdir)/python/Plugins/Extensions/EtPortal

install_PYTHON =	\
	__init__.py \
	plugin.py 

dist_install_DATA = \
	burnseries.png \
	cinestream.png \
	dvd_player.png \
	emc.png \
	eporner.png \
	etstreams.png \
	extensions_plugins.png \
	foreca.png \
	information.png \
	information.xml \
	keymap.xml \
	kinokiste.png \
	laolatv.png \
	loads7.png \
	media_player.png \
	merlinmusic.png \
	movie_player.png \
	moviestream.png \
	musicstream.png \
	mytube.png \
	opera.png \
	picture_player.png \
	plugins.png \
	pornkiste.png \
	sel.png \
	sel.png-bak \
	shutdown.png \
	shutdown.xml \
	timer.png \
	weblinks.png \
	webmedia.png \
	wetter.png \
	1channel.png \
	m2k.png \
	m2ks.png \
	putpat.png \
	songs.png
